--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,6 @@
   (aoTransferir)="transferir($event)"
 ></app-novatransferencia>
 
-<app-extrato [transferencias]="transferencias"></app-extrato>
+<app-extrato></app-extrato>
 
 
