--- a/src/app/extrato/extrato.component.html
+++ b/src/app/extrato/extrato.component.html
@@ -4,7 +4,8 @@
         <th class="tabela__cabecalho__conteudo">Valor</th>
         <th class="tabela__cabecalho__conteudo">destino</th>
     </thead>
-    <tbody>
+    <tbody *ngIf="transferencias.length > 0; else listaVazia" > <!--se tIver algum conteudo maior que 0
+                                                                    dentro de transf, Ira renderIzar-->
         <tr class="tabela__linha" *ngFor="let transferencia of transferencias">
             <td class="tabela__conteudo">{{transferencia.data | date : 'short'}}</td>
             <td class="tabela__conteudo">{{transferencia.valor | currency}}</td> <!--currency formata p valor de moeda-->
@@ -12,4 +13,7 @@
         </tr>
     </tbody>
 </table>
+<ng-template #listaVazia>
+    <p>Nenhuma operação cadastrada</p>
+</ng-template>
 
