Adicionando rotas com router-outlet

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,2 @@
-<app-novatransferencia
-  (aoTransferir)="transferir($event)"
-></app-novatransferencia>
-
-<app-extrato></app-extrato>
-
+<router-outlet></router-outlet>
 
