--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,5 @@
 header {
-    background-color: var(--primary);
+    background-color: purple;
     padding: 10px;
     color: white;
     display: flex;
