--- a/src/app/extrato/extrato.component.html
+++ b/src/app/extrato/extrato.component.html
@@ -1,4 +1,7 @@
+<section class="container">
+<h2 class="titulo">transferencias</h2>
 <table class="tabela">
+    
     <thead class="tabela__cabecalho">
         <th class="tabela__cabecalho__conteudo">Data</th>
         <th class="tabela__cabecalho__conteudo">Valor</th>
@@ -16,4 +19,4 @@
 <ng-template #listaVazia>
     <p>Nenhuma operação cadastrada</p>
 </ng-template>
-
+</section>
