--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,10 @@
+<header>
+    <a routerLink="extrato">Bytebank</a>
+    <a routerLink="nova-transferencia" routerLinkActive="ativo">Nova transferencia</a>
+</header>
+
+
+<main>
 <router-outlet></router-outlet>
+</main>
 
