--- a/src/app/extrato/extrato.component.scss
+++ b/src/app/extrato/extrato.component.scss
@@ -1,7 +1,8 @@
 .titulo{
     text-align: center;
-    font-size: 24px;
+    font-size: 26px;
     margin-bottom: 16px;
+    font-family: 'Poppins', sans-serif;
 
 }
 
@@ -12,7 +13,7 @@
     box-shadow: 0 0 8px rgba(0,0,0,0.1);
 
     &__cabecalho{
-        color: green;
+        color: #8B008B;
 
         &__conteudo{
             padding: 10px;
