--- a/src/app/extrato/extrato.component.scss
+++ b/src/app/extrato/extrato.component.scss
@@ -1,3 +1,6 @@
+
+
+
 .titulo{
     text-align: center;
     font-size: 26px;
@@ -11,6 +14,9 @@
     margin: 0 auto;
     background-color: #fff;
     box-shadow: 0 0 8px rgba(0,0,0,0.1);
+    width: 400px;
+    margin-right: 30px;
+
 
     &__cabecalho{
         color: #8B008B;
